--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -4,7 +4,8 @@
   <span>{{ title }}</span>
   <div class="spacer"></div>
   <div class="button-group">
-    <button mat-flat-button>Byproducts</button>
-    <button mat-flat-button>Capacity Utilization Reports</button>
+    <button mat-flat-button [routerLink]="['/byproducts']" routerLinkActive="router-link-active" >Byproducts</button>
+    <button mat-flat-button [routerLink]="['/reports']" routerLinkActive="router-link-active" >Capacity Utilization Reports</button>
   </div>
 </mat-toolbar>
+<router-outlet></router-outlet>
