--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,11 +1,6 @@
-<mat-toolbar>
-  <img width="40" alt="Phonix Pharma Logo" src="../assets/img/phoenix.png" />
-  <div class="spacer"></div>
-  <span>{{ title }}</span>
-  <div class="spacer"></div>
-  <div class="button-group">
-    <button mat-flat-button [routerLink]="['/byproducts']" routerLinkActive="router-link-active" >Byproducts</button>
-    <button mat-flat-button [routerLink]="['/reports']" routerLinkActive="router-link-active" >Capacity Utilization Reports</button>
-  </div>
-</mat-toolbar>
-<router-outlet></router-outlet>
+<div class="mat-typography app-frame mat-app-background">
+  <app-header></app-header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
