--- a/client-app/src/app/header/header.component.html
+++ b/client-app/src/app/header/header.component.html
@@ -9,14 +9,14 @@
       [routerLink]="['/byproducts']"
       routerLinkActive="router-link-active"
     >
-      Evidencija nusproizvoda
+      Nusproizvodi
     </button>
     <button
       mat-flat-button
       [routerLink]="['/reports']"
       routerLinkActive="router-link-active"
     >
-      Evidencija izveštaja o popunjenosti kapaciteta
+      Izveštaji
     </button>
   </div>
 </mat-toolbar>
