--- a/client-app/src/app/byproducts/byproduct-modal/byproduct-modal.component.html
+++ b/client-app/src/app/byproducts/byproduct-modal/byproduct-modal.component.html
@@ -1,18 +1,20 @@
-<div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+<h2 mat-dialog-title>Izmena nusproizvoda</h2>
+<mat-dialog-content>
+<form [formGroup]="editByproductForm" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
 
   <mat-form-field appearance="fill" color="accent">
     <mat-label>Naziv</mat-label>
-    <input matInput type="text" [ngModel]="data.name" />
+    <input matInput type="text" formControlName="name"/>
   </mat-form-field>
 
   <mat-form-field appearance="fill" color="accent">
     <mat-label>Težina po jed. mere</mat-label>
-    <input matInput type="text" [ngModel]="data.weightPerUM" />
+    <input matInput type="text" formControlName="weightPerUM"/>
   </mat-form-field>
 
   <mat-form-field appearance="fill" color="accent">
     <mat-label>Jedinica mere</mat-label>
-    <mat-select [value]="data.measurementUnit.id">
+    <mat-select formControlName="measurementUnitId">
       <mat-option *ngFor="let um of measurementUnits" [value]="um.id">{{
         um.name
       }}</mat-option>
@@ -21,18 +23,18 @@
 
   <mat-form-field appearance="fill" color="accent">
     <mat-label>Skladište</mat-label>
-    <mat-select [value]="data.warehouse?.id">
+    <mat-select formControlName="warehouseId">
       <mat-option *ngFor="let warehouse of warehouses" [value]="warehouse.id">{{warehouse.name}}</mat-option>
     </mat-select>
   </mat-form-field>
 
   <mat-form-field appearance="fill" color="accent">
     <mat-label>Količina</mat-label>
-    <input matInput type="text" [ngModel]="data.quantity" />
+    <input matInput type="text" formControlName="quantity" />
   </mat-form-field>
-
-  <span fxLayout fxLayoutAlign="center center" fxLayoutGap="10px">
-    <button mat-raised-button (click)="onCancel()">Poništi</button>
-    <button mat-raised-button (click)="onEdit()">Sačuvaj</button>
-  </span>
-</div>
+</form>
+</mat-dialog-content>
+<mat-dialog-actions align="center">
+  <button mat-raised-button mat-dialog-close>Poništi</button>
+  <button mat-raised-button (click)="onEdit()">Sačuvaj</button>
+</mat-dialog-actions>
