--- a/client-app/src/app/byproducts/byproducts.component.html
+++ b/client-app/src/app/byproducts/byproducts.component.html
@@ -45,59 +45,59 @@
     </form>
   </section>
   <section fxLayout = "row" fxLayoutAlign = "center center">
-    <table mat-table [dataSource]="dataSource" fxFlex>
+    <mat-table [dataSource]="dataSource" fxFlex>
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.id | number}}</td>
+        <mat-header-cell *matHeaderCellDef>No.</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{ element.id | number}}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Naziv</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Naziv</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef>Težina po jed. mere</th>
-        <td mat-cell *matCellDef="let element">{{ element.weightPerUM | number }}</td>
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Težina po JM</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let element">{{ element.weightPerUM | number }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="measurementUnit">
-        <th mat-header-cell *matHeaderCellDef>Jedinica mere</th>
-        <td mat-cell *matCellDef="let element">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>JM</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let element">
           {{ element.measurementUnit.name }}
-        </td>
+        </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="warehouse">
-        <th mat-header-cell *matHeaderCellDef>Skladište</th>
-        <td mat-cell *matCellDef="let element">{{ element.warehouse?.name }}</td>
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Skladište</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let element">{{ element.warehouse?.name }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="quantity">
-        <th mat-header-cell *matHeaderCellDef>Količina</th>
-        <td mat-cell *matCellDef="let element">{{ element.quantity | number }}</td>
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Količina</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let element">{{ element.quantity | number }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="edit">
-        <th mat-header-cell *matHeaderCellDef>Izmeni</th>
-        <td mat-cell *matCellDef="let element">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Izmeni</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let element">
           <button mat-icon-button (click)="onEditByproduct(element)">
             <mat-icon>edit</mat-icon>
           </button>
-        </td>
+        </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef>Obriši</th>
-        <td mat-cell *matCellDef="let element">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Obriši</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let element">
           <button mat-icon-button (click)="onDeleteByproduct(element)">
             <mat-icon>delete</mat-icon>
           </button>
-        </td>
+        </mat-cell>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+    </mat-table>
   </section>
 </div>
