client-app: report search and priview

--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="mat-typography app-frame mat-app-background">
+<div>
   <app-header></app-header>
   <main>
     <router-outlet></router-outlet>
