--- a/client-app/src/app/header/header.component.html
+++ b/client-app/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <img width="40" alt="Phonix Pharma Logo" src="../assets/img/phoenix.png" />
-  <div class="spacer"></div>
+  <!-- <div class="spacer"></div> -->
   <span>{{ title }}</span>
   <div class="spacer"></div>
   <div class="button-group">
