client-app:Add new and delete existing items from report in memory

--- a/client-app/src/app/byproducts/byproducts.component.css
+++ b/client-app/src/app/byproducts/byproducts.component.css
@@ -6,6 +6,6 @@ table{
   width: 80%;
 }
 
-.mat-column-name {
+mat-header-cell.mat-column-byproductName, mat-cell.mat-column-byproductName{
   padding-right: 15px;
 }
