--- a/client-app/src/app/reports/reports.component.html
+++ b/client-app/src/app/reports/reports.component.html
@@ -5,7 +5,12 @@
   fxLayoutGap="20px"
   [formGroup]="reportForm"
 >
-  <section class="full-width">
+  <section
+    class="row"
+    fxLayout="row"
+    fxLayoutAlign="center center"
+    fxLayoutGap="10%"
+  >
     <mat-form-field appearance="fill">
       <mat-label>Izaberite broj izveštaja</mat-label>
       <mat-select matInput>
@@ -17,6 +22,9 @@
         >
       </mat-select>
     </mat-form-field>
+    <button mat-raised-button *ngIf="isLoaded" (click)="onChangeReport()">
+      Izmenite izveštaj
+    </button>
   </section>
   <section
     *ngIf="isLoaded"
@@ -45,14 +53,14 @@
         [readonly]="readonly"
       />
     </mat-form-field>
-  </section>
+    <!-- </section>
   <section
     *ngIf="isLoaded"
     class="row"
     fxLayout="row"
     fxLayoutAlign="space-between end"
     fxLayoutGap="10%"
-  >
+  > -->
     <mat-form-field appearance="fill">
       <mat-label>Skladište</mat-label>
       <mat-select matInput formControlName="warehouse" [disabled]="readonly">
@@ -75,28 +83,101 @@
   <section class="full-width" *ngIf="isLoaded">
     <mat-form-field appearance="fill">
       <mat-label>Napomena</mat-label>
-      <textarea rows="2" matInput formControlName="note" [readonly]="readonly"></textarea>
+      <textarea
+        row="1"
+        matInput
+        formControlName="note"
+        [readonly]="readonly"
+      ></textarea>
     </mat-form-field>
   </section>
+</form>
+<div
+  class="content"
+  fxLayout="column"
+  fxLayoutAlign="center center"
+  fxLayoutGap="20px"
+  [formGroup]="reportForm"
+>
+  <form
+    [formGroup]="itemForm"
+    class="row"
+    fxLayout="row"
+    fxLayoutAlign="center center"
+    fxLayoutGap="4%"
+    *ngIf="isLoaded && !readonly"
+  >
+    <mat-form-field appearance="fill">
+      <mat-label>Izaberite nusproizvod</mat-label>
+      <mat-select matInput formControlName="byproduct">
+        <mat-option *ngFor="let byproduct of byproducts" [value]="byproduct">{{
+          byproduct.name + " " + "(" + byproduct.measurementUnit.name + ")"
+        }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Količina za odlaganje</mat-label>
+      <input
+        matInput
+        type="number"
+        min="0"
+        formControlName="quantityForDisposal"
+      />
+    </mat-form-field>
+    <button mat-raised-button (click)="onAddItem()">Dodaj stavku</button>
+  </form>
   <section class="full-width" *ngIf="isLoaded">
     <mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="id">
         <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
-        <mat-cell mat-cell *matCellDef="let element">{{element.id}}</mat-cell>
+        <mat-cell mat-cell *matCellDef="let element">{{ element.id }}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="byproductName">
         <mat-header-cell *matHeaderCellDef>Nusproizvod</mat-header-cell>
-        <mat-cell mat-cell *matCellDef="let element">{{element.byproductName}}</mat-cell>
+        <mat-cell mat-cell *matCellDef="let element">{{
+          element.byproduct.name
+        }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="measurementUnit">
+        <mat-header-cell *matHeaderCellDef>JM</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let element">{{
+          element.byproduct.measurementUnit.name
+        }}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="quantityForDisposal">
-        <mat-header-cell *matHeaderCellDef>Količina za odlaganje</mat-header-cell>
-        <mat-cell mat-cell *matCellDef="let element">{{element.quantityForDisposal}}</mat-cell>
+        <mat-header-cell *matHeaderCellDef
+          >Količina za odlaganje</mat-header-cell
+        >
+        <mat-cell mat-cell *matCellDef="let element">{{
+          element.quantityForDisposal | number
+        }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="edit">
+        <mat-header-cell *matHeaderCellDef>Izmena</mat-header-cell>
+        <mat-cell *matCellDef>
+          <button mat-icon-button [disabled]="readonly">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="delete">
+        <mat-header-cell *matHeaderCellDef>Brisanje</mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <button mat-icon-button (click)="onDeleteItem(element)" [disabled]="readonly">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </mat-cell>
       </ng-container>
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
 
-    <mat-paginator #paginator [pageSize]="3" [pageSizeOptions]="[3, 5, 10]" showFirstLastButtons></mat-paginator>
+    <mat-paginator
+      #paginator
+      [pageSize]="3"
+      [pageSizeOptions]="[3, 5, 10]"
+      showFirstLastButtons
+    ></mat-paginator>
   </section>
-</form>
+</div>
