--- a/client-app/src/app/byproducts/byproduct-modal/byproduct-modal.component.html
+++ b/client-app/src/app/byproducts/byproduct-modal/byproduct-modal.component.html
@@ -1,40 +1,59 @@
 <h2 mat-dialog-title>Izmena nusproizvoda</h2>
 <mat-dialog-content>
-<form [formGroup]="editByproductForm" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+  <form
+    [formGroup]="editByproductForm"
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    fxLayoutGap="20px"
+  >
+    <mat-form-field appearance="fill">
+      <mat-label>Naziv</mat-label>
+      <input matInput type="text" formControlName="name" />
+      <mat-error>Morate uneti naziv nusproizvoda</mat-error>
+    </mat-form-field>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Naziv</mat-label>
-    <input matInput type="text" formControlName="name"/>
-  </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Težina po jed. mere</mat-label>
+      <input matInput type="number" formControlName="weightPerUM" />
+      <mat-error>Morate uneti težinu po jedinici mere veću od 0.</mat-error>
+    </mat-form-field>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Težina po jed. mere</mat-label>
-    <input matInput type="text" formControlName="weightPerUM"/>
-  </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Jedinica mere</mat-label>
+      <mat-select formControlName="measurementUnitId">
+        <mat-option *ngFor="let um of measurementUnits" [value]="um.id">{{
+          um.name
+        }}</mat-option>
+      </mat-select>
+      <mat-error>Morate izbrati jedinicu mere.</mat-error>
+    </mat-form-field>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Jedinica mere</mat-label>
-    <mat-select formControlName="measurementUnitId">
-      <mat-option *ngFor="let um of measurementUnits" [value]="um.id">{{
-        um.name
-      }}</mat-option>
-    </mat-select>
-  </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Skladište</mat-label>
+      <mat-select formControlName="warehouseId">
+        <mat-option
+          *ngFor="let warehouse of warehouses"
+          [value]="warehouse.id"
+          >{{ warehouse.name }}</mat-option
+        >
+      </mat-select>
+      <mat-error>Morate izbrati skladište.</mat-error>
+    </mat-form-field>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Skladište</mat-label>
-    <mat-select formControlName="warehouseId">
-      <mat-option *ngFor="let warehouse of warehouses" [value]="warehouse.id">{{warehouse.name}}</mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Količina</mat-label>
-    <input matInput type="text" formControlName="quantity" />
-  </mat-form-field>
-</form>
+    <mat-form-field appearance="fill">
+      <mat-label>Količina</mat-label>
+      <input matInput type="text" formControlName="quantity" />
+      <mat-error>Morate uneti količinu veću od 0.</mat-error>
+    </mat-form-field>
+  </form>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
   <button mat-raised-button mat-dialog-close>Poništi</button>
-  <button mat-raised-button (click)="onEdit()">Sačuvaj</button>
+  <button
+    mat-raised-button
+    (click)="onEdit()"
+    [disabled]="editByproductForm.invalid"
+  >
+    Sačuvaj
+  </button>
 </mat-dialog-actions>
