--- a/client-app/src/app/reports/edit-report/edit-report.component.html
+++ b/client-app/src/app/reports/edit-report/edit-report.component.html
@@ -43,6 +43,7 @@
       />
       <mat-datepicker-toggle [for]="date" matSuffix></mat-datepicker-toggle>
       <mat-datepicker #date></mat-datepicker>
+      <mat-error>Morate uneti datum izvestaja</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Procenat popunjenosti</mat-label>
@@ -52,6 +53,7 @@
         formControlName="utilizationRate"
         [readonly]="readonly"
       />
+      <mat-error>Morate uneti procenat popunjenosti (0-100).</mat-error>
     </mat-form-field>
     <!-- </section>
   <section
@@ -70,6 +72,7 @@
           >{{ warehouse.name }}</mat-option
         >
       </mat-select>
+      <mat-error>Morate izbrati skladište.</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Zaposleni</mat-label>
@@ -78,6 +81,7 @@
           employee.firstName + " " + employee.lastName
         }}</mat-option>
       </mat-select>
+      <mat-error>Morate izbrati zaposlenog.</mat-error>
     </mat-form-field>
   </section>
   <section class="full-width" *ngIf="isLoaded">
@@ -114,6 +118,7 @@
           byproduct.name + " " + "(" + byproduct.measurementUnit.name + ")"
         }}</mat-option>
       </mat-select>
+      <mat-error>Morate izabrati nusproizvod</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Količina za odlaganje</mat-label>
@@ -123,6 +128,7 @@
         min="0"
         formControlName="quantityForDisposal"
       />
+      <mat-error>Morate uneti količinu za odlaganje veću od 0</mat-error>
     </mat-form-field>
     <button mat-raised-button (click)="onAddItem()" [disabled]="itemForm.invalid">Dodaj stavku</button>
   </form>
@@ -181,6 +187,6 @@
     ></mat-paginator>
   </section>
   <section class="full-width" *ngIf="isLoaded" fxLayout="row" fxLayoutAlign="end">
-    <button mat-raised-button (click)="onUpdateReport()" [disabled]="readonly">Sačuvaj izveštaj</button>
+    <button mat-raised-button (click)="onUpdateReport()" [disabled]="readonly || reportForm.invalid || selectedReport.items.length===0">Sačuvaj izveštaj</button>
   </section>
 </div>
