--- a/client-app/src/app/byproducts/byproducts.component.html
+++ b/client-app/src/app/byproducts/byproducts.component.html
@@ -1,98 +1,4 @@
 <div class="content">
-  <!-- <section>
-    <form
-      [formGroup]="newByproductForm"
-      fxLayout="row"
-      fxLayout.lt-md="column"
-      fxLayoutAlign="center center"
-      fxLayoutGap="30px"
-    >
-      <mat-form-field appearance="outline">
-        <mat-label>Naziv</mat-label>
-        <input matInput type="text" formControlName="name" />
-        <mat-error>Morate uneti naziv nusproizvoda</mat-error>
-      </mat-form-field>
-      <mat-form-field appereance="standard" appearance="outline">
-        <mat-label>Težina po jed. mere</mat-label>
-        <input matInput type="number" formControlName="weightByUM" />
-        <mat-error>Morate uneti težinu po jedinici mere veću od 0.</mat-error>
-      </mat-form-field>
-      <mat-form-field >
-        <mat-label>Jedinica mere</mat-label>
-        <mat-select matInput formControlName="measurementUnit">
-          <mat-option *ngFor="let um of measurementUnits" [value]="um.id">{{
-            um.name
-          }}</mat-option>
-        </mat-select>
-        <mat-error>Morate izbrati jedinicu mere.</mat-error>
-      </mat-form-field>
-      <button
-        type="button"
-        mat-raised-button
-        (click)="addByproduct()"
-        [disabled]="newByproductForm.invalid"
-      >
-        Dodaj nusproizvod
-      </button>
-    </form>
-  </section> -->
   <app-add-byproduct-form></app-add-byproduct-form>
-  <section fxLayout = "column">
-    <mat-table [dataSource]="dataSource" fxFlex matSort>
-      <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef>No.</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element.id | number}}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Naziv</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="weight">
-        <mat-header-cell *matHeaderCellDef>Težina po JM</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element.weightPerUM | number }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="measurementUnit">
-        <mat-header-cell *matHeaderCellDef>JM</mat-header-cell>
-        <mat-cell  *matCellDef="let element">
-          {{ element.measurementUnit.name }}
-        </mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="warehouse">
-        <mat-header-cell mat-header-cell *matHeaderCellDef>Skladište</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element.warehouse?.name }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="quantity">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Količina</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element.quantity | number }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="edit">
-        <mat-header-cell *matHeaderCellDef>Izmeni</mat-header-cell>
-        <mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="onEditByproduct(element)">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="delete">
-        <mat-header-cell *matHeaderCellDef>Obriši</mat-header-cell>
-        <mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="onDeleteByproduct(element)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-cell>
-      </ng-container>
-
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-    </mat-table>
-
-    <mat-paginator [pageSize]='5' [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
-  </section>
+  <app-byproducts-table></app-byproducts-table>
 </div>
